# fastapi_example

./: .env.dist  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
scripts/: docker-entrypoint.sh
src/: app_config.py
src/data_access/models/: __init__.py  base.py  user.py
src/dependencies/admin/: auth.py  models.py
src/di/providers/: adapters.py  usecases.py
src/entrypoint/: web_api.py
src/factory/: app_config.py  container.py
src/utils/: __init__.py  jwt.py  middleware.py
src/utils/loggers/: __init__.py
