[tool.poetry]
name = "fastapi_example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
dishka = "^1.4.1"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
uvicorn = "^0.32.1"
aiohttp = "3.10.11"
sqladmin = {extras = ["full"], version = "^0.20.1"}
sqlalchemy = "^2.0.36"
pyjwt = "^2.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
src = ["src"]
exclude = ["migrations/*"]
